Update WhatsApp contact number in index.html

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
         </a>
         <a href="https://wa.me/917386666420"
            class="px-5 py-2 rounded-xl bg-emerald-500/90 text-slate-950 font-semibold text-sm text-center">
-          WhatsApp: +91-85238-60577
+          WhatsApp: +91-7386666420
         </a>
         <a href="https://www.linkedin.com/"
            class="px-5 py-2 rounded-xl bg-slate-900 border border-slate-600 text-slate-100 text-sm text-center">
