Revise service description for clarity and detail
Updated the description of services offered to enhance clarity and detail.

--- a/index.html
+++ b/index.html
@@ -83,9 +83,9 @@
         </h1>
 
         <p class="mt-4 text-slate-300 text-sm md:text-lg leading-relaxed max-w-xl">
-          I help organizations secure Web, Mobile (Android/iOS) and APIs through deep manual 
-          penetration testing aligned with OWASP, MASVS and PCI DSS. I focus on real attack paths,
-          not just scanner reports.
+          I help organizations strengthen their Web, Mobile (Android/iOS), and API security by performing deep, 
+          manual penetration testing aligned with OWASP, MASVS, and PCI DSS 4.0. My assessments uncover real-world 
+          attack paths that automated scanners miss, enabling leadership to make confident, risk-based security decisions.
         </p>
 
         <!-- BUTTONS -->
