--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
       background-image: radial-gradient(circle at 1px 1px, rgba(148,163,184,0.12) 1px, transparent 0);
       background-size: 32px 32px;
     }
+
+    /* Ticker */
+    @keyframes marquee {
+      0% { transform: translateX(100%); }
+      100% { transform: translateX(-100%); }
+    }
+    .animate-marquee {
+      display: inline-block;
+      animation: marquee 30s linear infinite;
+    }
   </style>
 </head>
 
@@ -70,11 +80,11 @@
     </div>
   </header>
 
-  <!-- HERO / ENTRY -->
+  <!-- HERO -->
   <section id="top" class="max-w-6xl mx-auto px-4 pt-10 pb-24 md:pt-16">
     <div class="flex flex-col md:flex-row items-center gap-10 md:gap-14">
 
-      <!-- Text -->
+      <!-- TEXT SIDE -->
       <div class="flex-1">
         <p class="text-xs tracking-[0.3em] text-primarySoft uppercase mb-3">
           Senior Security Analyst · Offensive Security
@@ -84,12 +94,13 @@
         </h1>
 
         <p class="mt-3 text-sm md:text-base text-slate-300 leading-relaxed max-w-xl">
-          I help organizations strengthen their Web, Mobile (Android/iOS), and API security by performing deep,
-          manual penetration testing aligned with OWASP, MASVS, and PCI DSS 4.0. My assessments uncover real-world
-          attack paths that automated scanners miss — enabling leadership to make confident, risk-based security decisions.
+          I help organizations strengthen their Web, Mobile (Android/iOS), and API security by performing 
+          deep manual penetration testing aligned with OWASP, MASVS, and PCI DSS 4.0. My assessments uncover 
+          real-world attack paths that automated scanners miss — enabling leadership to make confident, 
+          risk-based security decisions.
         </p>
 
-        <!-- Buttons -->
+        <!-- BUTTONS -->
         <div class="mt-7 flex flex-wrap gap-4">
           <a href="#profile"
              class="px-5 py-3 rounded-xl bg-primary text-slate-950 font-semibold text-sm shadow-lg shadow-cyan-500/30">
@@ -101,21 +112,21 @@
           </a>
         </div>
 
-        <!-- Badges -->
+        <!-- BADGES -->
         <div class="mt-5 flex flex-wrap gap-2 text-[11px] text-slate-400">
           <span class="px-3 py-1 rounded-full bg-slate-900/70 border border-slate-700">Web & API Pentesting</span>
           <span class="px-3 py-1 rounded-full bg-slate-900/70 border border-slate-700">Mobile Security (MASVS)</span>
           <span class="px-3 py-1 rounded-full bg-slate-900/70 border border-slate-700">PCI DSS 4.0 Aligned</span>
         </div>
 
-        <!-- LinkedIn -->
+        <!-- LINKEDIN -->
         <a href="https://www.linkedin.com/in/vaasumelipaka"
            class="inline-block mt-5 px-5 py-2 rounded-xl bg-slate-900 border border-slate-700 text-slate-200 text-sm">
           View LinkedIn Profile →
         </a>
       </div>
 
-      <!-- Photo -->
+      <!-- PHOTO -->
       <div class="flex-1 flex justify-center md:justify-end">
         <div class="relative w-64 h-64 md:w-72 md:h-72 rounded-3xl glass shadow-[0_0_80px_rgba(34,211,238,0.25)] flex items-center justify-center">
           <img
@@ -151,9 +162,7 @@
       <div class="glass rounded-2xl p-6">
         <h3 class="text-lg font-semibold text-slate-100 mb-2">Who I Am</h3>
         <p class="text-sm text-slate-300 leading-relaxed">
-          I am a Senior Security Analyst specialized in penetration testing for Web, Mobile and
-          API platforms. I combine offensive security techniques with strong understanding of
-          business workflows.
+          I am a Senior Security Analyst specialized in penetration testing for Web, Mobile and API platforms.
         </p>
       </div>
 
@@ -185,28 +194,28 @@
       </div>
 
       <div class="glass rounded-2xl p-5">
-        <h3 class="font-semibold text-slate-100 mb-2">Mobile App Security (Android / iOS)</h3>
-        <p class="text-slate-300">Full MASVS testing including storage, API calls, RE, runtime protections & SSL pinning.</p>
+        <h3 class="font-semibold text-slate-100 mb-2">Mobile App Security</h3>
+        <p class="text-slate-300">MASVS testing including storage, API calls, RE, runtime protections & SSL pinning.</p>
       </div>
 
       <div class="glass rounded-2xl p-5">
         <h3 class="font-semibold text-slate-100 mb-2">API Security</h3>
-        <p class="text-slate-300">Testing REST APIs for BOLA/BFLA, JWT issues, rate limiting & validation gaps.</p>
+        <p class="text-slate-300">Testing BOLA/BFLA, JWT issues, rate limiting, replay & abuse scenarios.</p>
       </div>
 
       <div class="glass rounded-2xl p-5">
         <h3 class="font-semibold text-slate-100 mb-2">DevSecOps</h3>
-        <p class="text-slate-300">SAST, SCA, dependency scanning, CI/CD hardening & secrets scanning.</p>
+        <p class="text-slate-300">SAST, SCA, CI/CD hardening & secrets scanning.</p>
       </div>
 
       <div class="glass rounded-2xl p-5">
         <h3 class="font-semibold text-slate-100 mb-2">Cloud Security</h3>
-        <p class="text-slate-300">IAM, storage, network, misconfigurations & exposure reviews (AWS/Azure).</p>
+        <p class="text-slate-300">AWS & Azure IAM / Network / Storage misconfiguration review.</p>
       </div>
 
       <div class="glass rounded-2xl p-5">
         <h3 class="font-semibold text-slate-100 mb-2">Retesting & Advisory</h3>
-        <p class="text-slate-300">Retesting, fix validation & ongoing advisory for releases.</p>
+        <p class="text-slate-300">Validation of fixes & continuous advisory support.</p>
       </div>
     </div>
   </section>
@@ -243,6 +252,133 @@
       © 2025 VM SecOps – Portfolio & Security Services by Vasu Melipaka.
     </p>
   </section>
+
+
+<!-- ========================================================= -->
+<!-- 🔥 CYBER THREAT WIDGET + LIVE CVE + LIVE NEWS + TICKER -->
+<!-- ========================================================= -->
+
+<!-- POPUP WIDGET -->
+<div id="vm-cyber-widget"
+     class="fixed bottom-20 right-6 w-96 bg-slate-900/95 border border-slate-700 shadow-xl rounded-2xl p-4 text-slate-200 z-50 backdrop-blur-xl hidden">
+
+  <div class="flex justify-between items-center mb-2">
+    <h3 class="text-sm font-semibold text-primary">🔐 Live Cyber Threat Updates</h3>
+    <button onclick="document.getElementById('vm-cyber-widget').style.display='none'"
+      class="text-slate-400 hover:text-primary text-lg font-bold">×</button>
+  </div>
+
+  <div class="text-[11px] text-slate-400 mb-2">Latest Cybersecurity News</div>
+
+  <div id="vm-news-list" class="text-xs text-slate-300 space-y-3 h-40 overflow-y-auto pr-2">
+    <p>Loading news...</p>
+  </div>
+
+  <hr class="border-slate-700 my-3">
+
+  <div class="text-[11px] text-slate-400 mb-2">Latest Critical CVEs (High & Critical)</div>
+
+  <div id="vm-cve-list" class="text-xs text-slate-300 space-y-2 h-36 overflow-y-auto pr-2">
+    <p>Loading CVEs...</p>
+  </div>
+
+  <button class="mt-3 w-full py-2 bg-primary text-slate-950 text-xs font-semibold rounded-lg"
+          onclick="document.getElementById('vm-cyber-widget').style.display='none'">
+    Close
+  </button>
+</div>
+
+<!-- SCROLLING TICKER -->
+<div class="fixed bottom-0 left-0 w-full bg-slate-950/90 border-t border-slate-700 py-2 overflow-hidden z-40 backdrop-blur">
+  <div id="vm-ticker" class="whitespace-nowrap text-primary text-xs font-semibold animate-marquee">
+    Fetching real-time cybersecurity updates…
+  </div>
+</div>
+
+<!-- LIVE NEWS + CVE FETCH SCRIPT -->
+<script>
+// Fetch Cybersecurity News
+async function loadCyberNews() {
+  const container = document.getElementById("vm-news-list");
+  container.innerHTML = "Loading news…";
+
+  try {
+    const res = await fetch("https://hn.algolia.com/api/v1/search?query=cyber%20security&tags=story");
+    const data = await res.json();
+
+    container.innerHTML = "";
+    data.hits.slice(0, 8).forEach(n => {
+      container.innerHTML += `
+        <div>
+          <a href="${n.url}" target="_blank" class="text-primary font-medium hover:underline">
+            ${n.title}
+          </a>
+          <p class="text-slate-500 text-[10px]">${new Date(n.created_at).toLocaleDateString()}</p>
+        </div>
+      `;
+    });
+
+    return data.hits.slice(0, 5).map(n => n.title);
+  } catch {
+    container.innerHTML = "<p class='text-red-400'>News fetch failed.</p>";
+    return [];
+  }
+}
+
+// Fetch Latest CVEs
+async function loadCVEs() {
+  const container = document.getElementById("vm-cve-list");
+  container.innerHTML = "Loading CVEs…";
+
+  try {
+    const res = await fetch("https://services.nvd.nist.gov/rest/json/cves/2.0?cvssV3Severity=HIGH,Critical");
+    const data = await res.json();
+
+    container.innerHTML = "";
+
+    data.vulnerabilities.slice(0, 8).forEach(v => {
+      const cve = v.cve.id;
+      const score = v.cve.metrics.cvssMetricV31?.[0]?.cvssData?.baseScore || "N/A";
+      const desc = v.cve.descriptions[0].value;
+
+      container.innerHTML += `
+        <div>
+          <span class="text-red-400 font-bold">${cve}</span>
+          <span class="text-slate-400 text-[10px]">Score: ${score}</span>
+          <p class="text-slate-500 text-[10px]">${desc.substring(0, 80)}...</p>
+        </div>
+      `;
+    });
+
+    return data.vulnerabilities.slice(0, 5).map(v => v.cve.id + " (High)");
+  } catch {
+    container.innerHTML = "<p class='text-red-400'>CVE fetch failed.</p>";
+    return [];
+  }
+}
+
+// Build Ticker
+async function updateTicker() {
+  const ticker = document.getElementById("vm-ticker");
+
+  const news = await loadCyberNews();
+  const cves = await loadCVEs();
+
+  const combined = [
+    ...news.map(n => `📰 ${n}`),
+    ...cves.map(c => `⚠️ ${c}`)
+  ];
+
+  ticker.innerText = combined.join("  •  ");
+}
+
+// Show popup after 3 sec
+setTimeout(() => {
+  document.getElementById("vm-cyber-widget").style.display = "block";
+  updateTicker();
+}, 3000);
+
+</script>
 
 </body>
 </html>
